# timeuntil

./: .dockerignore  .gitignore  Dockerfile  README.md  makefile  pyproject.toml  requirements.txt  setup.py  test.Dockerfile  test_entrypoint.sh  test_requirements.txt  uwsgi.yaml
.github/workflows/: production_image.yml  tests.yml
tests/: test_timeleft.py  test_utils.py
timeleft/: __init__.py  app.py  commands.py  forms.py  timeleft.py  views.py
timeleft/templates/: base.html
timeuntil/: app.py  forms.py  utils.py  views.py  wsgi.py
timeuntil/static/js/: countdown.js  package.json
timeuntil/templates/: base.html
