[tool.poetry]
name = "timeleft"
version = "0.1.0"
description = ""
authors = ["Davide Sarra <davide.sarra@gmail.com>"]

[tool.poetry.dependencies]
python = "~=3.8"
pendulum = "^2.0.5"
Click = "^7.0"
Flask-Bootstrap = "^3.3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
